<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yyrz.patient.UI.assessmentUI.MemoryAssessment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/memory_textView1"
        android:layout_width="809dp"
        android:layout_height="192dp"
        android:gravity="center"
        android:text="@string/memory"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:fontFamily="casual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <TableLayout
        android:id="@+id/memory_tablelayout"
        android:layout_width="668dp"
        android:layout_height="392dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/memory_textView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/memory_tips1"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="36sp"
                android:textStyle="bold"
                app:fontFamily="casual" />

            <TextView
                android:id="@+id/memory_textView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/memory_tips2"
                android:textColor="#000000"
                android:textSize="36sp"
                android:textStyle="bold"
                app:fontFamily="casual" />

            <TextView
                android:id="@+id/memory_textView4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/memory_tips3"
                android:textColor="#000000"
                android:textSize="36sp"
                android:textStyle="bold"
                app:fontFamily="casual" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/memory_textView5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/memory_tips4"
                android:textColor="#000000"
                android:textSize="36sp"
                android:textStyle="bold"
                app:fontFamily="casual" />

            <TextView
                android:id="@+id/memory_textView6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/memory_tips5"
                android:textColor="#000000"
                android:textSize="36sp"
                android:textStyle="bold"
                app:fontFamily="casual" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
